# x-audio

./: Cargo.toml  README.md  audio.d
examples/: main.rs  mcu.rs
src/: buffer.rs  lib.rs  output.rs
src/desktop/: mod.rs  stream.rs
src/mcu/: mod.rs
