[package]
name = "x-audio"
authors = ["Nguyễn Quý Ngọc"]
version = "0.1.0"
edition = "2024"
rust-version = "1.97.0"
repository = "https://github.com/ChaoswareHQ/x-audio"
license = "MIT OR Apache-2.0"

[dependencies]
cpal = "0.18.1"
ringbuf = "0.5.0"

[profile.release]
opt-level      = 3
lto            = true
codegen-units  = 1
strip          = "symbols"
panic          = "abort"